Bug with z-index property fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,6 @@
   position: relative;
   overflow: hidden;
   padding-bottom: 90px;
-  z-index: -2;
 }
 
 .kaufman__triangle {
@@ -232,11 +231,11 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
 }
 
 .section-title_theme_dark {
   color: white;
+  position: relative;
   padding-top: 90px;
   width: 60%;
   line-height: 1.15em;
@@ -263,6 +262,7 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
 }
 
 .table__heading_theme_dark {
